packages/isar_plus/test/errors/class/abstract.dart
// must not be abstract

import 'package:isar_plus/isar_plus.dart';

@collection
abstract class Model {
  late int id;
}
